fixing layout issues on park info

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,9 @@ body p, li {
   margin: 0 6%;
 }
 
+.tbspace {
+	margin: 3% 0;	
+}
 
 .writeup {
   font-size: 12pt;
@@ -84,37 +87,6 @@ body p, li {
 }
 
 
-.imgnav {
-  padding: 2%;
-  padding-left: 10%;
-}
-
-
-.imgnav img {
-  margin: 0  2%;
-  border-style: solid;
-  border-width: 10px;
-  border-color: #CCCCCC;
-  opacity: 0.8;
-}
-
-
-.imgnav img:hover {
-  opacity: 1;
-}
-
-
-
-
-.topimgnav img {
-  margin: 2%;
-  border-style: solid;
-  border-width: 10px;
-  border-color: #CCCCCC;
-  opacity: 0.6;
-  width: 100px;
-}
-
 
 
 
@@ -143,55 +115,120 @@ body p, li {
   max-width: initial;
 }
 
+.mcmap {
 
+	height:400px;	
+}
+.mcmap iframe {
+	height:100%;	
+	
+}
+  .iconsp img{
+	  
+	  width:15%;
+  
+  }
   
   .thumb {
-                padding: 2%;
-              }
+	padding: 2%;
+  }
 
 
-              .thumb img {
-                width: 80%;
-                margin-left: 4%;
-                margin-top: 4%;
-              }
+  .thumb img {
+	width: 80%;
+	margin-left: 4%;
+	margin-top: 4%;
+  }
 
 
-              .ilabel {
-                background-color: #ffffff;
-                color: #CCCCCC;
-                font-size: 12pt;
-              }
+  .ilabel {
+	background-color: #ffffff;
+	color: #CCCCCC;
+	font-size: 12pt;
+  }
 
 
-              .thumbinfo {
-                margin: 4% 0;
-                line-height: 2px;
-              }
-              
+  .thumbinfo {
+	margin: 4% 0;
+	line-height: 2px;
+  }
+  
               
 .map-area {
   padding-bottom: 4%;
 }
 
-        @media only screen and (min-width: 40.063em) {
+@media only screen and (min-width: 40.063em) {
+		
+		  #mendrop {
+			display: none !important;
+		  }
+		  .sresults {
+			position: absolute;
+			top: 90%;
+			left:56%;
+			background-color: #ffffff;
+			z-index: 1;
+			width: 40%;
+			display: none;
+			box-shadow: 5px 5px 5px #888888;
+			
+		  }
+		  
+		.imgnav {
+			margin:0;
+			float:left;
+		  
+		}
+		
+		
+		.imgnav img {
+		  margin: 0  2%;
+		  border-style: solid;
+		  border-width: 10px;
+		  border-color: #CCCCCC;
+		  opacity: 0.8;
+		}
+		
+		
+		.imgnav img:hover {
+		  opacity: 1;
+		}
+		
+		.imgnav ul {
+			text-decoration:none;
+			display:inline-block;	
+			padding:0px;
+		
+			margin-left:0rem!important;
+		}
+		
+		.imgnav li{
+			text-decoration:none;
+			display:inline-block;	
+			padding:0rem!important;
+			
+		}
+		
+		.imgnav figure {
+			margin-left:0px;	
+	
+		}
+		.topimgnav {
+			float:left;	
+		
+		}
+		.topimgnav img {
+		  margin-right: 40%;
+		  border-style: solid;
+		  border-width: 10px;
+		  border-color: #CCCCCC;
+		  opacity: 0.6;
+		  width: 100px;
+		}
 
-          #mendrop {
-            display: none !important;
-          }
-          .sresults {
-    position: absolute;
-    top: 90%;
-    left:56%;
-    background-color: #ffffff;
-    z-index: 1;
-    width: 40%;
-    display: none;
-    box-shadow: 5px 5px 5px #888888;
-    
-  }
   
-        }
+}
         @media only screen and (max-width: 40em) {
 
             .topimgnav {
@@ -236,26 +273,29 @@ body p, li {
                 min-width: 100%;
               }
 
-              .amen {
-                width: 30vw;
-                margin: 0;
-                float: left;
-                padding: 2%;
+            
+
+              .iconsp img{
+				  
+				  width:40%;
+				  margin:1px;
+              
               }
-
-
-              .iconsp {
-                width: 70vw;
-                margin: 0;
-                float: left;
-              }
-
+				
 
               .iconsp p {
                 font-size: 8pt;
               }
 
-
+			.mcmap {
+			
+				height:150px;	
+			}
+			.mcmap iframe {
+				height:100%;	
+				
+			}
+				
               .gallery {
                 width: 100%;
                 background-color: #ffccee;
